; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_shader_cache.c_gl_sc_uniform_image2D_wo.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_shader_cache.c_gl_sc_uniform_image2D_wo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_shader_cache = type { i32 }
%struct.ra_tex = type { i32 }
%struct.sc_uniform = type { i8*, %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { %struct.ra_tex* }
%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [31 x i8] c"GL_ARB_shader_image_load_store\00", align 1
@RA_VARTYPE_IMG_W = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"writeonly image2D\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gl_sc_uniform_image2D_wo(%struct.gl_shader_cache* %0, i8* %1, %struct.ra_tex* %2) #0 {
  %4 = alloca %struct.gl_shader_cache*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.ra_tex*, align 8
  %7 = alloca %struct.sc_uniform*, align 8
  store %struct.gl_shader_cache* %0, %struct.gl_shader_cache** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.ra_tex* %2, %struct.ra_tex** %6, align 8
  %8 = load %struct.gl_shader_cache*, %struct.gl_shader_cache** %4, align 8
  %9 = call i32 @gl_sc_enable_extension(%struct.gl_shader_cache* %8, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %10 = load %struct.gl_shader_cache*, %struct.gl_shader_cache** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call %struct.sc_uniform* @find_uniform(%struct.gl_shader_cache* %10, i8* %11)
  store %struct.sc_uniform* %12, %struct.sc_uniform** %7, align 8
  %13 = load i32, i32* @RA_VARTYPE_IMG_W, align 4
  %14 = load %struct.sc_uniform*, %struct.sc_uniform** %7, align 8
  %15 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %14, i32 0, i32 2
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  store i32 %13, i32* %16, align 8
  %17 = load %struct.sc_uniform*, %struct.sc_uniform** %7, align 8
  %18 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %17, i32 0, i32 0
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8** %18, align 8
  %19 = load %struct.gl_shader_cache*, %struct.gl_shader_cache** %4, align 8
  %20 = load %struct.sc_uniform*, %struct.sc_uniform** %7, align 8
  %21 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %20, i32 0, i32 2
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = call i32 @gl_sc_next_binding(%struct.gl_shader_cache* %19, i32 %23)
  %25 = load %struct.sc_uniform*, %struct.sc_uniform** %7, align 8
  %26 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %25, i32 0, i32 2
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 1
  store i32 %24, i32* %27, align 4
  %28 = load %struct.ra_tex*, %struct.ra_tex** %6, align 8
  %29 = load %struct.sc_uniform*, %struct.sc_uniform** %7, align 8
  %30 = getelementptr inbounds %struct.sc_uniform, %struct.sc_uniform* %29, i32 0, i32 1
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  store %struct.ra_tex* %28, %struct.ra_tex** %31, align 8
  ret void
}

declare dso_local i32 @gl_sc_enable_extension(%struct.gl_shader_cache*, i8*) #1

declare dso_local %struct.sc_uniform* @find_uniform(%struct.gl_shader_cache*, i8*) #1

declare dso_local i32 @gl_sc_next_binding(%struct.gl_shader_cache*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
